--- a/github_workflows/workflows/clang-format.yml
+++ b/github_workflows/workflows/clang-format.yml
@@ -1,26 +1,22 @@
-name: Clang format verification
+name: Clang-format Verification
 on:
   push:
     branches:
     - master
   pull_request:
-    branches: 
+    branches:
     - master
-  
+
 jobs:
   format-checking:
     runs-on: ubuntu-latest
-    
-    environment: 
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-      
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-          
-      - name: Run clang format
+
+      - name: Run clang-format
         uses: jidicula/clang-format-action@v4.11.0
         with:
-          clang-format-version: '16'
+          clang-format-version: '17'
           check-path: 'Source'
