--- a/github_workflows/workflows/doxygen.yml
+++ b/github_workflows/workflows/doxygen.yml
@@ -1,28 +1,26 @@
 name: Game Documentation
+
 on:
   push:
-    branches:
-    - master
-  pull_request:
     branches: 
     - master
 
-permissions: 
+permissions:
   pages: write
   deployments: write
   id-token: write
-    
+  
 env:
   CONAN_REVISIONS_ENABLED: 1
-  
+
 jobs:
   docs:
     runs-on: windows-latest
-    
-    environment: 
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-      
+
+    environment:
+     name: github-pages
+     url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Check Installed Software
         run: where git & where python & where pip
@@ -32,15 +30,24 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-          
+
       - name: Install Conan
-        run: pip install conan
+        run: pip install conan==1.61
+
+      - name: Set Conan Folder
+        run: conan config set storage.path=${{ github.workspace }}\packages
         
       - name: Install Doxygen
-        run: conan download doxygen/1.9.4:68ef3b853de6b165f8f476aeb9fd9b19931b5f0f --remote conancenter
+        run: conan download doxygen/1.9.4@#19fe2ac34109f3119190869a4d0ffbcb --remote conancenter
+
+      - name: Find Doxygen Executable Path
+        run: |
+          $doxygenPath = Get-ChildItem -Path "${{ github.workspace }}\packages" -Recurse -Filter doxygen.exe | Select-Object -First 1 -ExpandProperty FullName
+          echo "DOXYGEN_EXE_PATH=$doxygenPath" | Out-File -Append $env:GITHUB_ENV
+        shell: powershell
         
       - name: Run Doxygen
-        run: doxygen devops\docs\Doxyfile
+        run: ${{ env.DOXYGEN_EXE_PATH }} ${{ github.workspace }}\devops_data\Doxyfile
         
       - name: Upload Docs
         uses: actions/upload-pages-artifact@v1
@@ -48,8 +55,8 @@ jobs:
           path: Documentation\html
         
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v2
         
-      - name: Deploy to GitHub pages
+      - name: Deploy To GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v1
