--- a/setup/config.template
+++ b/setup/config.template
@@ -2,12 +2,12 @@
 
 :: *************************** !! IMPORTANT !! ***************************
 ::
-:: Required vars to set: EnginePath, ProjectPureName, VersionSelector
+:: Required vars to set: EnginePath, VersionSelector, COPYRIGHT_LINE
 ::
 :: *************************** !! IMPORTANT !! ***************************
 
 rem Engine params
-set EnginePath=c:\Builds\UE_5.0_InstalledBuild
+set EnginePath=c:\Builds\UE_5.1
 set VersionSelector=c:\Program Files (x86)\Epic Games\Launcher\Engine\Binaries\Win64\UnrealVersionSelector.exe
 rem Editor path
 set EditorPath=%EnginePath%\Engine\Binaries\Win64\UnrealEditor.exe
@@ -15,21 +15,21 @@ set RunUATPath=%EnginePath%\Engine\Build\BatchFiles\RunUAT.bat
 
 rem Project params
 set ProjectRoot=%~dp0..
-:: Pure name of your project. Example: name of you project file is TPS.uproject, then ProjectPureName=TPS
-set ProjectPureName=<ProjectName>
+for %%f in ("%ProjectRoot%\*.uproject") do set ProjectPureName=%%~nf
 set ProjectName=%ProjectPureName%.uproject
 set ProjectPath=%ProjectRoot%\%ProjectName%
 set SourceCodePath=%ProjectRoot%\Source
+set PluginsPath=%ProjectRoot%\Plugins
 
 rem Build params
 set Platform=Win64
-:: Shipping, DebugGame
+:: Shipping, Development, DebugGame
 set Configuration=Development
 set ArchivePath=%ProjectRoot%\Build
 
 rem Other params
 set DirsToRemove=Intermediate DerivedDataCache Saved Binaries .vs Build Documentation
-set FilesToRemove=*.sln
+set FilesToRemove=*.sln .vsconfig
 
 rem Target generation params
 set COPYRIGHT_LINE=// My Game copyright
@@ -48,3 +48,6 @@ set ReportOutputPath=%ProjectRoot%\Build\Tests
 set ExludedPathForTestReport=%SourceCodePath%\%ProjectPureName%\Tests
 set UEAutomationContentPath=%EnginePath%\Engine\Content\Automation
 set OpenCPPCoveragePath=c:\Program Files\OpenCppCoverage\OpenCppCoverage.exe
+
+rem Misc
+set RarPath=C:\Program Files\WinRAR\WinRar.exe
