--- a/setup/.clang-format.template
+++ b/setup/.clang-format.template
@@ -1,7 +1,18 @@
 BasedOnStyle: Microsoft
-IndentWidth: '4'
-UseTab: Never
-TabWidth: '4'
+AccessModifierOffset: '-4'
+AlignAfterOpenBracket: BlockIndent
+AlignArrayOfStructures: Right
+AlignEscapedNewlines: LeftWithLastLine
+AlignOperands: AlignAfterOperator
+AllowAllArgumentsOnNextLine: true
+AllowShortBlocksOnASingleLine: Empty
+AllowShortCaseLabelsOnASingleLine: true
+AllowShortFunctionsOnASingleLine: Empty
+AllowShortIfStatementsOnASingleLine: WithoutElse
+AllowShortLambdasOnASingleLine: Inline
+AlwaysBreakTemplateDeclarations: Yes
+BreakConstructorInitializers: BeforeComma
+BreakBeforeTernaryOperators: true
 BreakBeforeBraces: Custom
 BraceWrapping:
   SplitEmptyFunction: false
@@ -9,28 +20,18 @@ BraceWrapping:
   AfterCaseLabel: true
   BeforeLambdaBody: true
 ColumnLimit: '200'
-AccessModifierOffset: '-4'
-SortIncludes: true
-AllowShortBlocksOnASingleLine: Empty
-AllowShortIfStatementsOnASingleLine: WithoutElse
-AllowShortFunctionsOnASingleLine: Inline
-AllowShortCaseLabelsOnASingleLine: true
-AllowShortLambdasOnASingleLine: Inline
-IndentCaseLabels: true
-AlignAfterOpenBracket: Align
-AllowAllArgumentsOnNextLine: true
-PointerAlignment: Left
-SpacesBeforeTrailingComments: 2
-AlignEscapedNewlines: Left
-SpaceAfterLogicalNot: false
-AlwaysBreakTemplateDeclarations: Yes
-BreakConstructorInitializers: BeforeComma
-NamespaceIndentation: None
-InsertNewlineAtEOF: true
-SpaceAfterCStyleCast: false
-AlignArrayOfStructures: Right
-ShortNamespaceLines: 0
 EmptyLineBeforeAccessModifier: Always
-AlignOperands: AlignAfterOperator
-BreakBeforeTernaryOperators: true
+IncludeBlocks: Preserve
+IndentCaseLabels: true
+IndentWidth: '4'
+InsertNewlineAtEOF: true
 KeepEmptyLinesAtTheStartOfBlocks: false
+NamespaceIndentation: None
+PointerAlignment: Left
+SortIncludes: true
+SpacesBeforeTrailingComments: 2
+SpaceAfterLogicalNot: false
+SpaceAfterCStyleCast: false
+ShortNamespaceLines: 0
+TabWidth: '4'
+UseTab: Never
